# machine-learning-rest-server

./: .gitignore  CMakeLists.txt  README.md  configure  tf_serving_rest_server.geany
cmake/: FindJson.cmake  FindProxygen.cmake  FindTensorFlow.cmake
resources/: test.cpb
src/: CMakeLists.txt
src/frontends/: CMakeLists.txt
src/frontends/src/: frontend_server_main.cpp  frontend_server_main1.cpp
src/libserver/: CMakeLists.txt
src/libserver/include/http/: ServerHandler.hpp  ServerHandlerFactory.hpp  ServerStats.hpp
src/libserver/include/jsonparse/: JsonParse.hpp  jsonparse.hpp
src/libserver/include/tensorflow_serving/: TensorflowServingClient.hpp
src/libserver/include/util/: Booster.hpp  to_string.h  xgboostcpp_def.h
src/libserver/include/xgboostcxx/: XGBoostServingClient.hpp  XGBooster.hpp  XGBoosterImpl.hpp
src/libserver/src/: JsonParse.cpp  ServerHandler.cpp  ServerHandlerFactory.cpp  TensorflowServingClient.cpp  XGBoostServingClient.cpp  XGBooster.cpp  XgBoostTest.cpp
